# secret-manager-controller

./: .gitignore  .gitmodules  .sops.yaml  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  REVIEW_FEEDBACK_RESPONSE.md  Tiltfile  Tiltfile.k3s  build.rs  flux-private-key-base64.txt  justfile  kind-config.yaml  skaffold.yaml  test_gcp_debug  test_gcp_simple
.cursor/: mcp_settings.json
.github/: dependabot.yml
config/: kustomization.yaml  namespace.yaml
crates/controller/: Cargo.toml  build.rs
crates/controller/src/: lib.rs  prelude.rs
crates/controller/src/cli/: check.rs  git_pulls.rs  install.rs  list.rs  mod.rs  reconcile.rs  status.rs  suspend.rs
crates/controller/src/config/: controller.rs  pact_mode.rs  watch.rs
crates/controller/src/controller/: backoff.rs  server.rs
crates/controller/src/controller/kustomize/: mod.rs  parse.rs
crates/controller/src/controller/parser/: mod.rs  parsers.rs
crates/controller/src/controller/parser/sops/: decrypt.rs
crates/controller/src/controller/reconciler/: source.rs  types.rs
crates/controller/src/controller/reconciler/artifact/: argocd.rs  download.rs  flux.rs
crates/controller/src/controller/reconciler/notifications/: fluxcd.rs
crates/controller/src/controller/reconciler/processing/: application_files.rs  kustomize.rs  properties.rs  secrets.rs
crates/controller/src/controller/reconciler/reconcile/: finalize.rs  mod.rs  provider.rs
crates/controller/src/controller/reconciler/sops/: load.rs  watch.rs
crates/controller/src/controller/reconciler/status/: annotations.rs  sops.rs
crates/controller/src/controller/reconciler/validation/: mod.rs  provider.rs
crates/controller/src/crd/: hot_reload.rs  logging.rs  mod.rs  provider.rs  source.rs  spec.rs  status.rs
crates/controller/src/observability/: otel.rs
crates/controller/src/observability/metrics/: provider_metrics.rs
crates/controller/src/provider/: mod.rs
crates/controller/src/provider/aws/: parameter_store.rs  parameter_store_pact_api_override.rs
crates/controller/src/provider/aws/parameter_store/: pact_api_override.rs
crates/controller/src/provider/aws/secrets_manager/: auth.rs  operations.rs  pact_api_override.rs
crates/controller/src/provider/azure/app_configuration/: operations.rs
crates/controller/src/provider/azure/key_vault/: mod.rs  operations.rs  pact_api_override.rs
crates/controller/src/provider/gcp/client/: common.rs
crates/controller/src/provider/gcp/client/rest/: mod.rs  operations.rs  pact_api_override.rs  requests.rs  responses.rs
crates/controller/src/provider/gcp/parameter_manager/: mod.rs  requests.rs  responses.rs
crates/controller/src/runtime/: error_policy.rs  initialization.rs  watch_loop.rs
crates/pact-mock-server/: Cargo.toml
crates/pact-mock-server/migrations/aws/: 001_create_schema.sql  002_create_secrets_table.sql  003_create_versions_table.sql  004_create_staging_labels_table.sql  005_create_parameters_table.sql  006_create_parameter_versions_table.sql  007_add_environment_location_columns.sql  008_add_environment_location_to_parameters.sql  009_create_filter_functions.sql  010_insert_test_data.sql  011_enforce_location_environment_not_null.sql
crates/pact-mock-server/migrations/azure/: 001_create_schema.sql  002_create_secrets_table.sql  003_create_versions_table.sql  004_create_deleted_secrets_table.sql  005_create_app_config_table.sql  006_create_app_config_versions_table.sql  007_add_environment_location_columns.sql  008_add_environment_location_to_app_config.sql  009_create_filter_functions.sql  010_insert_test_data.sql  011_enforce_location_environment_not_null.sql
crates/pact-mock-server/migrations/gcp/: 001_create_schema.sql  002_create_secrets_table.sql  003_create_versions_table.sql  004_create_parameters_table.sql  005_create_parameter_versions_table.sql  006_add_environment_location_columns.sql  007_add_environment_location_to_parameters.sql  008_create_filter_functions.sql  010_insert_test_data.sql  011_fix_automatic_location_to_null.sql  012_enforce_location_environment_not_null.sql
crates/pact-mock-server/src/: lib.rs  prelude.rs
crates/pact-mock-server/src/secrets/aws/: mod.rs
crates/pact-mock-server/src/secrets/azure/: mod.rs
crates/pact-mock-server/src/secrets/common/: db_store.rs  limits.rs  mod.rs  store.rs  store_enum.rs  store_trait.rs
crates/pact-mock-server/src/secrets/common/entities/: mod.rs
crates/pact-mock-server/src/secrets/common/entities/aws/: mod.rs  parameter.rs  parameter_version.rs  secret.rs  staging_label.rs  version.rs
crates/pact-mock-server/src/secrets/common/entities/azure/: app_config.rs  app_config_version.rs  deleted_secret.rs  mod.rs  secret.rs  version.rs
crates/pact-mock-server/src/secrets/common/entities/gcp/: mod.rs  parameter.rs  parameter_version.rs  secret.rs  version.rs
crates/pact-mock-server/src/secrets/gcp/: mod.rs  parameter_store.rs
crates/paths/: Cargo.toml
crates/paths/src/: builder.rs  gcp.rs  lib.rs  prelude.rs
crates/paths_deprecated/: Cargo.toml
crates/paths_deprecated/src/: lib.rs
deployment-configuration/: README.md
dockerfiles/: Dockerfile.base.controller  Dockerfile.base.pact-mock-server  Dockerfile.base.rust-builder  Dockerfile.controller  Dockerfile.controller.dev  Dockerfile.docs-site  Dockerfile.pact-mock-server  Dockerfile.pact-mock-server.build  Dockerfile.pact-mock-server.optimized  Dockerfile.pact-webhook  Dockerfile.pact-webhook.optimized  Dockerfile.postgres-manager  Dockerfile.postgres-manager.optimized  nginx.docs-site.conf
docs/: AZURE_FORK.md  BASE_PATH_ANALYSIS.md  BASE_PATH_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  CONFIG_STORE_ANALYSIS.md  CONFIG_STORE_COMPARISON.md  CONFIG_STORE_IMPLEMENTATION.md  CONTRIBUTING_TO_ESO.md  CONTROLLER_AUDIT_AND_DESIGN.md  CRASH_ANALYSIS.md  DEPENDABOT.md  ENVIRONMENT_FIELD_IMPLEMENTATION.md  FORK_PLAN.md  FORK_RUSTLS.md  GCP_SDK_COMPLETE.md  GCP_SDK_FIX_NOTES.md  GCP_SDK_TODO.md  IMPLEMENTATION_COMPLETE.md  (+18 more)
docs-site/: README.md  SEARCH_FEATURE.md  SEARCH_IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.ts
(+392 files in other folders)
