[package]
name = "paths"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared API path definitions for GCP, AWS, and Azure providers"
repository = "https://github.com/microscaler/PriceWhisperer"
keywords = ["kubernetes", "secrets", "gcp", "aws", "azure", "api-paths"]
categories = ["development-tools", "web-programming"]
readme = "../../README.md"

[lib]
name = "paths"
path = "src/lib.rs"

