[package]
name        = "smc-paths"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Type-safe API path builder for GCP Secret Manager, AWS Secrets Manager, and Azure Key Vault"
repository  = "https://github.com/octopilot/smc-paths"
keywords    = ["secrets", "gcp", "aws", "azure", "api-paths"]
categories  = ["development-tools", "web-programming"]
readme      = "../../README.md"

[lib]
name = "smc_paths"
path = "src/lib.rs"

